# core-py

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AGENTS.md  technical-design-template.md
src/core_py/: __init__.py  _async.py  config.py  context.py  data.py  dkit.py  httpx.py  logging.py  model.py  resource.py  trace.py
src/core_py/dkit/: __init__.py  errors.py  kit.py  memory.py  mongo.py  options.py  protocols.py  redis.py
src/core_py/model/: __init__.py  audit.py  entity.py  mongox.py  options.py  page.py  repo.py  snowflake_id.py
src/core_py/model/mongox/: __init__.py  codec.py  patch.py  query.py  repository.py
tests/: test__async.py  test_config.py  test_context.py  test_context_trace.py  test_data.py  test_dkit_backends.py  test_dkit_integration.py  test_httpx.py  test_logging.py  test_model_dkit.py  test_resource.py  test_trace.py
tests/dkit/: helpers.py  test_kit.py  test_memory.py  test_mongo.py  test_redis.py
tests/integration/: test_dkit_integration.py
tests/model/: test_audit.py  test_mongox.py  test_snowflake_id.py
