[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ofa-core-py"
version = "0.1.2"
description = "Python implementation of OFA core utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "dev-ofa" }]
keywords = ["ofa", "core", "config", "tracing", "http-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
    "aiofiles>=24.1",
    "httpx>=0.27",
    "sonyflake>=2.0.2",
]

[project.optional-dependencies]
dkit-mongo = ["pymongo>=4.7"]
dkit-redis = ["redis>=5.0"]
dkit = ["pymongo>=4.7", "redis>=5.0"]
dev = [
  "pytest-asyncio>=0.23",
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core_py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
